--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "geckodriver": "^1.22.1",
     "nightwatch": "^1.5.1"
+  },
+  "dependencies": {
+    "chromedriver": "^88.0.0"
   }
 }
